@@ -1,6 +1,10 @@
+asciival
+cmr_module
 csv_handler
 dap-server
 debug_functions
+dmrpp_module
+fileout_covjson
 fileout_gdal
 fileout_json
 fileout_netcdf
@@ -8,11 +12,10 @@ fits_handler
 freeform_handler
 gateway_module
 gdal_handler
-hdf4_handler
-hdf5_handler
 ncml_module
 netcdf_handler
 ugrid_functions
+usage
 w10n_handler
+www-interface
 xml_data_handler
-
