@@ -8,8 +8,8 @@
 AUTOMAKE_OPTIONS = foreign
 
 # Set the module version here, in the spec file and in configure.ac
-M_NAME=dap-server/ascii
-M_VER=4.1.6
+M_NAME=asciival
+M_VER=4.1.7
 
 AM_CPPFLAGS = -I$(top_srcdir)/dispatch -I$(top_srcdir)/dap -I$(top_srcdir) $(DAP_CFLAGS)
 LIBADD = $(BES_DAP_LIBS) $(DAP_SERVER_LIBS) $(DAP_CLIENT_LIBS)
